--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
     <properties>
         <!-- 进行工程编码声明 -->
-        <!-- 进行JDK版本声明 -->
+        <!-- 进行 JDK 版本声明 -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -32,6 +32,8 @@
         <druid.version>1.1.20</druid.version>
         <jedis.version>3.8.0</jedis.version>
         <spring-data-redis.version>2.7.5</spring-data-redis.version>
+        <kafka.version>2.6.3</kafka.version>
+        <spring-kafka.version>2.8.10</spring-kafka.version>
         <gson.version>2.8.9</gson.version>
         <snakeyaml.version>1.33</snakeyaml.version>
         <dubbo.version>2.7.18</dubbo.version>
@@ -45,10 +47,10 @@
         <slf4j.version>1.7.5</slf4j.version>
         <log4j2.version>2.17.2</log4j2.version>
         <jboss-logging.version>3.4.3.Final</jboss-logging.version>
-        <dozer.version>5.5.1</dozer.version>
+        <mapstruct.version>1.5.3.Final</mapstruct.version>
         <dutil.version>beta-0.3.2.a</dutil.version>
         <snowflake.version>1.4.10.a</snowflake.version>
-        <subgrade.version>1.2.14.a</subgrade.version>
+        <subgrade.version>1.3.1.a</subgrade.version>
         <spring-terminator.version>1.0.10.a</spring-terminator.version>
         <spring-telqos.version>1.1.5.a</spring-telqos.version>
         <dcti.version>1.1.5.a</dcti.version>
@@ -60,6 +62,7 @@
         <maven-assembly-plugin.version>3.1.1</maven-assembly-plugin.version>
         <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     </properties>
 
     <!-- 声明资源的坐标 -->
@@ -275,6 +278,24 @@
                 <version>${spring.version}</version>
                 <scope>test</scope>
             </dependency>
+            <!-- Redis 客户端 -->
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>${jedis.version}</version>
+            </dependency>
+            <!-- Spring 集成 Redis 组件 -->
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-redis</artifactId>
+                <version>${spring-data-redis.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>jcl-over-slf4j</artifactId>
+                        <groupId>org.slf4j</groupId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
             <!-- Kafka 客户端 -->
             <dependency>
                 <groupId>org.apache.kafka</groupId>
@@ -301,25 +322,31 @@
                     </exclusion>
                 </exclusions>
             </dependency>
-            <!-- Redis 客户端 -->
+            <!-- Zookeeper 客户端 -->
             <dependency>
-                <groupId>redis.clients</groupId>
-                <artifactId>jedis</artifactId>
-                <version>${jedis.version}</version>
-            </dependency>
-            <!-- Spring 集成 Redis 组件 -->
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-redis</artifactId>
-                <version>${spring-data-redis.version}</version>
+                <groupId>com.101tec</groupId>
+                <artifactId>zkclient</artifactId>
+                <version>${zkclient.version}</version>
                 <exclusions>
                     <exclusion>
-                        <artifactId>jcl-over-slf4j</artifactId>
+                        <artifactId>slf4j-log4j12</artifactId>
                         <groupId>org.slf4j</groupId>
+                    </exclusion>
+                    <exclusion>
+                        <artifactId>log4j</artifactId>
+                        <groupId>log4j</groupId>
+                    </exclusion>
+                    <exclusion>
+                        <artifactId>netty</artifactId>
+                        <groupId>io.netty</groupId>
+                    </exclusion>
+                    <exclusion>
+                        <artifactId>jline</artifactId>
+                        <groupId>jline</groupId>
                     </exclusion>
                 </exclusions>
             </dependency>
-            <!-- hibernate 组件 -->
+            <!-- Hibernate 组件 -->
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-core</artifactId>
@@ -343,40 +370,16 @@
                     </exclusion>
                 </exclusions>
             </dependency>
-            <!-- Dozer 模块 -->
+            <!-- Mapstruct 框架 -->
             <dependency>
-                <groupId>net.sf.dozer</groupId>
-                <artifactId>dozer</artifactId>
-                <version>${dozer.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <artifactId>jcl-over-slf4j</artifactId>
-                        <groupId>org.slf4j</groupId>
-                    </exclusion>
-                    <exclusion>
-                        <artifactId>commons-beanutils</artifactId>
-                        <groupId>commons-beanutils</groupId>
-                    </exclusion>
-                    <exclusion>
-                        <artifactId>commons-lang3</artifactId>
-                        <groupId>org.apache.commons</groupId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>net.sf.dozer</groupId>
-                <artifactId>dozer-spring</artifactId>
-                <version>${dozer.version}</version>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct</artifactId>
+                <version>${mapstruct.version}</version>
             </dependency>
             <!-- Dutil 组件 -->
             <dependency>
                 <groupId>com.dwarfeng</groupId>
                 <artifactId>dutil-basic</artifactId>
-                <version>${dutil.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.dwarfeng</groupId>
-                <artifactId>dutil-develop</artifactId>
                 <version>${dutil.version}</version>
             </dependency>
             <!-- SnowFlake 服务 -->
@@ -578,6 +581,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>${maven-deploy-plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven-compiler-plugin.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
