--- a/fdr-node/pom.xml
+++ b/fdr-node/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>com.dwarfeng</groupId>
         <artifactId>fdr</artifactId>
-        <version>1.11.0.a</version>
+        <version>1.11.1.a-SNAPSHOT</version>
     </parent>
 
     <artifactId>fdr-node</artifactId>
