--- a/fdr-stack/pom.xml
+++ b/fdr-stack/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>com.dwarfeng</groupId>
         <artifactId>fdr</artifactId>
-        <version>1.11.2.a</version>
+        <version>1.11.3.a-SNAPSHOT</version>
     </parent>
 
     <artifactId>fdr-stack</artifactId>
