--- a/fdr-node/src/main/resources/fdr/bridge.properties
+++ b/fdr-node/src/main/resources/fdr/bridge.properties
@@ -75,3 +75,35 @@ bridge.mock.data_config=[\
   {"point_id":1,"point_type":"int"},\
   {"point_id":2,"point_type":"int"},\
   ]
+###################################################
+#                    hibernate                    #
+###################################################
+# \u662F\u5426\u4F7F\u7528\u9879\u76EE\u672C\u8EAB\u7684 hibernate \u914D\u7F6E\u3002
+bridge.hibernate.use_project_config=true
+#
+# \u5982\u679C bridge.hibernate.use_project_config \u4E3A false\uFF0C\u5219\u9700\u8981\u6307\u5B9A\u4EE5\u4E0B\u7684\u914D\u7F6E\u3002
+# ------------------------------
+bridge.hibernate.jdbc.driver=com.mysql.cj.jdbc.Driver
+bridge.hibernate.jdbc.url=jdbc:mysql://your-host-here:3306/fdr?serverTimezone=Asia/Shanghai&autoReconnect=true
+bridge.hibernate.jdbc.username=root
+bridge.hibernate.jdbc.password=your-password-here
+bridge.hibernate.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# \u6570\u636E\u5E93\u7684\u6279\u91CF\u5199\u5165\u91CF\uFF0C\u8BBE\u7F6E\u6FC0\u8FDB\u7684\u503C\u4EE5\u63D0\u9AD8\u6570\u636E\u5E93\u7684\u5199\u5165\u6548\u7387\u3002
+bridge.hibernate.hibernate.jdbc.batch_size=100
+# \u6570\u636E\u5E93\u7684\u6279\u91CF\u6293\u53D6\u91CF\uFF0C\u8BBE\u7F6E\u6FC0\u8FDB\u7684\u503C\u4EE5\u63D0\u9AD8\u6570\u636E\u5E93\u7684\u8BFB\u53D6\u6548\u7387\u3002
+bridge.hibernate.hibernate.jdbc.fetch_size=50
+# \u8FDE\u63A5\u6C60\u6700\u5927\u6D3B\u52A8\u8FDE\u63A5\u6570\u91CF
+bridge.hibernate.data_source.max_active=20
+# \u8FDE\u63A5\u6C60\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5\u6570\u91CF
+bridge.hibernate.data_source.min_idle=0
+# ------------------------------
+#
+# \u662F\u5426\u542F\u7528 NativeLookup \u673A\u5236\u52A0\u901F\u90E8\u5206\u67E5\u8BE2\u3002
+# \u542F\u7528\u52A0\u901F\u673A\u5236\u540E\uFF0C\u6301\u4E45\u6570\u636E\u70B9\u3001\u88AB\u8FC7\u6EE4\u6570\u636E\u70B9\u3001\u88AB\u89E6\u53D1\u6570\u636E\u70B9\u7684\u5927\u90E8\u5206\u9884\u8BBE\u67E5\u8BE2\u5C06\u901A\u8FC7 JDBC \u76F4\u63A5\u5B9E\u73B0\uFF08\u524D\u63D0\u662F\u5FC5\u987B\u4F7F\u7528\u6307\u5B9A\u7684\u65B9\u8A00\uFF09\u3002
+# \u5982\u679C\u539F\u751F\u6570\u636E\u5E93SQL\u662F\u4E0D\u652F\u6301\u7684\uFF0C\u8BE5\u7A0B\u5E8F\u5C06\u4F1A\u7EE7\u7EED\u4F7F\u7528\u57FA\u4E8E hibernate criteria \u673A\u5236\u7684\u67E5\u8BE2\u3002
+#
+# \u652F\u6301\u7684\u65B9\u8A00:
+#  1. org.hibernate.dialect.MySQL8Dialect\u3002
+#
+# \u6B22\u8FCE\u5927\u5BB6\u6301\u7EED\u8D21\u732E\u5176\u5B83\u79CD\u7C7B\u7684\u6570\u636E\u5E93\u652F\u6301\u3002
+bridge.hibernate.hibernate.accelerate_enabled=true
