--- a/fdr-node/src/main/resources/redis/timeout.properties
+++ b/fdr-node/src/main/resources/redis/timeout.properties
@@ -13,6 +13,10 @@ cache.timeout.entity.filter_support=3600000
 cache.timeout.entity.trigger_support=3600000
 # \u6620\u5C04\u5668\u652F\u6301\u5BF9\u8C61\u7F13\u5B58\u7684\u8D85\u65F6\u65F6\u95F4\u3002
 cache.timeout.entity.mapper_support=3600000
+# \u6E05\u6D17\u5668\u4FE1\u606F\u5BF9\u8C61\u7F13\u5B58\u7684\u8D85\u65F6\u65F6\u95F4\u3002
+cache.timeout.entity.washer_info=3600000
+# \u6E05\u6D17\u5668\u652F\u6301\u5BF9\u8C61\u7F13\u5B58\u7684\u8D85\u65F6\u65F6\u95F4\u3002
+cache.timeout.entity.washer_support=3600000
 #------------------------------------------------------------------------------------
 #  \u952E\u503C\u5217\u8868\u7F13\u5B58\u65F6\u7684\u8D85\u65F6\u65F6\u95F4
 #------------------------------------------------------------------------------------
@@ -20,3 +24,5 @@ cache.timeout.entity.mapper_support=3600000
 cache.timeout.key_list.enabled_filter_info=3600000
 # \u4F7F\u80FD\u89E6\u53D1\u5668\u4FE1\u606F\u7684\u8D85\u65F6\u65F6\u95F4\u3002
 cache.timeout.key_list.enabled_trigger_info=3600000
+# \u4F7F\u80FD\u6E05\u6D17\u5668\u4FE1\u606F\u7684\u8D85\u65F6\u65F6\u95F4\u3002
+cache.timeout.key_list.enabled_washer_info=3600000
