--- a/fdr-node/src/main/resources/fdr/source.properties
+++ b/fdr-node/src/main/resources/fdr/source.properties
@@ -6,8 +6,6 @@ source.kafka.dwarfeng_dct.bootstrap_servers=your-ip1:9092,your-ip2:9092,your-ip3
 # \u4F1A\u8BDD\u7684\u8D85\u65F6\u9650\u5236: \u5982\u679Cconsumer\u5728\u8FD9\u6BB5\u65F6\u95F4\u5185\u6CA1\u6709\u53D1\u9001\u5FC3\u8DF3\u4FE1\u606F\uFF0C\u4E00\u6B21 rebalance \u5C06\u4F1A\u4EA7\u751F\u3002
 # \u8BE5\u503C\u5FC5\u987B\u5728[group.min.session.timeout.ms, group.max.session.timeout.ms]\u8303\u56F4\u5185\uFF0C\u9ED8\u8BA4: 10000\u3002
 source.kafka.dwarfeng_dct.session_timeout_ms=10000
-# \u5206\u7EC4\u540D\u79F0
-source.kafka.dwarfeng_dct.group=fdr
 # \u65B0\u7684 group \u52A0\u5165 topic \u65F6\uFF0C\u4ECE\u4EC0\u4E48\u4F4D\u7F6E\u5F00\u59CB\u6D88\u8D39\u3002
 source.kafka.dwarfeng_dct.auto_offset_reset=latest
 # \u76D1\u542C\u5668\u542F\u7528\u7684\u6D88\u8D39\u8005\u7684\u7EBF\u7A0B\u6570\u3002
@@ -16,7 +14,8 @@ source.kafka.dwarfeng_dct.auto_offset_reset=latest
 source.kafka.dwarfeng_dct.concurrency=2
 # \u76D1\u542C\u5668\u8C03\u7528 KafkaConsumer.poll(Duration) \u65B9\u6CD5\u7684\u8D85\u65F6\u65F6\u95F4\uFF0C\u5982\u679C\u8D85\u8FC7\u8FD9\u4E2A\u65F6\u95F4\u8FD8\u6CA1\u6709\u62C9\u53D6\u5230\u6570\u636E\uFF0C\u5219\u8FD4\u56DE\u7A7A\u5217\u8868\u3002
 source.kafka.dwarfeng_dct.poll_timeout=3000
-# \u76D1\u542C\u5668\u7684 id\uFF0C\u6BCF\u4E00\u4E2A\u8282\u70B9\u7684\u76D1\u542C\u5668 id \u90FD\u5E94\u8BE5\u4E0D\u540C\uFF0C\u4E5F\u4E0D\u80FD\u4E0E\u5176\u5B83\u7684\u4EFB\u4F55 bean \u7684 id \u76F8\u540C\u3002
+# \u76D1\u542C\u5668\u7684 id\uFF0C\u6BCF\u4E00\u4E2A\u8282\u70B9\u7684\u76D1\u542C\u5668 id \u90FD\u5E94\u4E0E\u8BE5\u8282\u70B9\u7684\u5176\u5B83 kafka \u76D1\u542C\u5668\u7684 id \u4E0D\u540C\u3002
+# \u8BE5\u8BBE\u7F6E\u4F1A\u8986\u76D6 kafka \u7684 group.id \u8BBE\u7F6E\uFF0C\u56E0\u6B64\u65E0\u9700\u8BBE\u7F6E group.id\u3002
 source.kafka.dwarfeng_dct.listener_id=fdr.source.dwarfeng_dct
 # \u76D1\u542C\u5668\u7684\u76EE\u6807 topic\u3002
 source.kafka.dwarfeng_dct.listener_topic=dwarfeng_dct.data_info
@@ -33,8 +32,6 @@ source.kafka.dcti.bootstrap_servers=your-ip1:9092,your-ip2:9092,your-ip3:9092
 # \u4F1A\u8BDD\u7684\u8D85\u65F6\u9650\u5236: \u5982\u679Cconsumer\u5728\u8FD9\u6BB5\u65F6\u95F4\u5185\u6CA1\u6709\u53D1\u9001\u5FC3\u8DF3\u4FE1\u606F\uFF0C\u4E00\u6B21 rebalance \u5C06\u4F1A\u4EA7\u751F\u3002
 # \u8BE5\u503C\u5FC5\u987B\u5728[group.min.session.timeout.ms, group.max.session.timeout.ms]\u8303\u56F4\u5185\uFF0C\u9ED8\u8BA4: 10000\u3002
 source.kafka.dcti.session_timeout_ms=10000
-# \u5206\u7EC4\u540D\u79F0
-source.kafka.dcti.group=fdr
 # \u65B0\u7684 group \u52A0\u5165 topic \u65F6\uFF0C\u4ECE\u4EC0\u4E48\u4F4D\u7F6E\u5F00\u59CB\u6D88\u8D39\u3002
 source.kafka.dcti.auto_offset_reset=latest
 # \u76D1\u542C\u5668\u542F\u7528\u7684\u6D88\u8D39\u8005\u7684\u7EBF\u7A0B\u6570\u3002
@@ -43,7 +40,8 @@ source.kafka.dcti.auto_offset_reset=latest
 source.kafka.dcti.concurrency=2
 # \u76D1\u542C\u5668\u8C03\u7528 KafkaConsumer.poll(Duration) \u65B9\u6CD5\u7684\u8D85\u65F6\u65F6\u95F4\uFF0C\u5982\u679C\u8D85\u8FC7\u8FD9\u4E2A\u65F6\u95F4\u8FD8\u6CA1\u6709\u62C9\u53D6\u5230\u6570\u636E\uFF0C\u5219\u8FD4\u56DE\u7A7A\u5217\u8868\u3002
 source.kafka.dcti.poll_timeout=3000
-# \u76D1\u542C\u5668\u7684 id\uFF0C\u6BCF\u4E00\u4E2A\u8282\u70B9\u7684\u76D1\u542C\u5668 id \u90FD\u5E94\u8BE5\u4E0D\u540C\uFF0C\u4E5F\u4E0D\u80FD\u4E0E\u5176\u5B83\u7684\u4EFB\u4F55 bean \u7684 id \u76F8\u540C\u3002
+# \u76D1\u542C\u5668\u7684 id\uFF0C\u6BCF\u4E00\u4E2A\u8282\u70B9\u7684\u76D1\u542C\u5668 id \u90FD\u5E94\u4E0E\u8BE5\u8282\u70B9\u7684\u5176\u5B83 kafka \u76D1\u542C\u5668\u7684 id \u4E0D\u540C\u3002
+# \u8BE5\u8BBE\u7F6E\u4F1A\u8986\u76D6 kafka \u7684 group.id \u8BBE\u7F6E\uFF0C\u56E0\u6B64\u65E0\u9700\u8BBE\u7F6E group.id\u3002
 source.kafka.dcti.listener_id=fdr.source.dcti
 # \u76D1\u542C\u5668\u7684\u76EE\u6807 topic\u3002
 source.kafka.dcti.listener_topic=dcti.data_info
