--- a/fdr-node/pom.xml
+++ b/fdr-node/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>com.dwarfeng</groupId>
         <artifactId>fdr</artifactId>
-        <version>2.0.2.a</version>
+        <version>2.0.3.a-SNAPSHOT</version>
     </parent>
 
     <artifactId>fdr-node</artifactId>
